# taco-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  dashboard.py  pyproject.toml  requirements.txt  run_all.py  run_benchmark_parallel.sh
.github/workflows/: ci.yaml
assets/: README.md
results2/: adult_log.txt  diabetes_log.txt  ieee_log.txt  nyc_log.txt  porto_log.txt
scripts/: make_plots.py
tabular_c/: __init__.py  api.py  benchmark.py  cli.py  config.py  corruptions.py  datasets.py  models.py  plots.py  utils.py
